// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkIcon should render when isCompact = false 1`] = `
<DocumentFragment>
  <div
    aria-label="ARK"
    class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background"
    data-testid="NetworkIcon-ARK-ark.mainnet"
  >
    <div
      class="sc-bdvvtL qGXhc"
      data-testid="NetworkIcon__icon"
      height="20"
      width="20"
    >
      <svg>
        ark.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIcon should render when isCompact = true 1`] = `
<DocumentFragment>
  <div
    aria-label="ARK"
    class="w-5 h-5 inline-flex items-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
    data-testid="NetworkIcon-ARK-ark.mainnet"
  >
    <div
      class="sc-bdvvtL qGXhc"
      data-testid="NetworkIcon__icon"
      height="20"
      width="20"
    >
      <svg>
        ark.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
